# actix-web-todo

./: Cargo.toml  README.md  USERDATA.db  USERDATA.db-shm  USERDATA.db-wal
src/: main.rs
src/api/: main_api.rs  mod.rs  web_api.rs
src/db/: db_api.rs  mod.rs  modles.rs
src/sql/: 221024.sql
static/css/: about.css  apps.css  enroll.css  indexcss.css  login.css
static/javascript/: addtodo.js
static/pages/: about.html  apps.html  enroll.html  index.html  login.html
