[package]
name = "simple-todo-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-rt = "2.7.0"
actix-files = "0.6.2"
actix-session = { version = "0.7", features = ["cookie-session"] }
tera = "1.17.1"
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls" , "sqlite" ] }
serde = { version = "1.0.147", features = [ "derive" ] }
serde_json = "1.0.87"