[package]
name = "simple-todo-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-rt = "2.9.0"
actix-files = "0.6.2"
actix-session = { version = "0.8.0", features = ["cookie-session"] }
tera = "1.19.1"
sqlx = { version = "0.7.2", features = [ "runtime-tokio" , "sqlite" ] }
serde = { version = "1.0.188", features = [ "derive" ] }
serde_json = "1.0.107"